refactor(tasksapi): ♻️ modernize to Java 21 idioms
Convert DTOs, domain events, and value objects to Java records for
immutability and zero-boilerplate data classes. Replace @Data with
@Getter on mutable entities to prevent unintended setter exposure.

Replace Collectors.toList() with Stream.toList() (Java 16+ idiom).
Harden AsyncConfig with CallerRunsPolicy backpressure and
AsyncUncaughtExceptionHandler. Move @EnableAsync from TasksApiApplication
to AsyncConfig. Externalize DB credentials to environment variables
and disable SQL debug logging for production readiness.